Fixed spacing in the testimonial section

--- a/src/Components/Testimonial/Testimonial.css
+++ b/src/Components/Testimonial/Testimonial.css
@@ -131,7 +131,7 @@
 
 @media screen and (max-width: 768px) {
     .testimonial-container {
-        height: 50vh;
+        height: 65vh;
     }
 
     .testimonial-header {
@@ -159,13 +159,13 @@
         margin: auto;
         margin-bottom: 2rem;
         font-weight: 300;
-        margin-top: 2rem;
+        margin-top: 2.5rem;
 
     }
 
     .testimonial-img {
-        width: 70px;
-        height: 70px;
+        width: 80px;
+        height: 80px;
     }
 }
 
@@ -194,7 +194,7 @@
     }
 
     .testimonial-img {
-        width: 60px;
-        height: 60px;
+        width: 75px;
+        height: 75px;
     }
 }
